<package>
  <name>reset_location</name>
  <version>0.0.1</version>
  <description>
     reset_location
  </description>

  <maintainer email="rainlee@gmail.com">HYC Robot</maintainer>

  <license>BSD</license>

  <author>Rain Lee</author>
  

  <url type="website">http://ros.org/wiki/razor_imu_9dof</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
<run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2</run_depend>


</package>
