<?xml version="1.0"?>
<package>
  <name>samsungcmd_msgs</name>
  <version>0.1.0</version>
  <description>samsung command System messages, services and actions</description>

  <author>Handsome Chiu</author>
  <maintainer email="chiuhandsome1966@gmail.com">Handsome Chiu</maintainer>
  <license>BSD</license>
  <!--
  <url type="website">http://ros.org/wiki/yocs_msgs</url>
  <url type="repository">https://github.com/yujinrobot/yujin_ocs</url>
  <url type="bugtracker">https://github.com/yujinrobot/yujin_ocs/issues</url>
  -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>		<!-- #should be added -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>			<!-- #should be added -->
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
